# task-pilot

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
docs/superpowers/plans/: 2026-04-08-tmux-rewrite-plan.md
docs/superpowers/specs/: 2026-04-08-tmux-rewrite-design.md
src/task_pilot/: app.py  cli.py  config.py  db.py  git_branch.py  hooks.py  launcher.py  models.py  scanner.py  session_tracker.py  summarizer.py  textual_app.py  title_clean.py  tmux.py  transcript_reader.py  transcript_resolver.py  welcome.py
src/task_pilot/screens/: detail_screen.py  list_screen.py
src/task_pilot/styles/: app.tcss
src/task_pilot/widgets/: action_steps.py  command_bar.py  confirm_dialog.py  header_bar.py  new_session_dialog.py  search_bar.py  session_row.py  task_row.py  timeline.py
tests/: test_cli.py  test_db.py  test_e2e.py  test_git_branch.py  test_hooks.py  test_integration_cli.py  test_launcher.py  test_models.py  test_new_session_dialog.py  test_phase1_integration.py  test_phase2_integration.py  test_phase3_tui_integration.py  test_phase4_integration.py  test_phase5_interaction.py  test_phase6_e2e.py  test_scanner.py  test_session_row.py  test_session_tracker.py  test_summarizer.py  test_tmux.py  test_transcript_reader.py  test_transcript_resolver.py  test_tui.py  test_tui_static.py  test_watchdog.py
