[project]
name = "task-pilot"
version = "0.1.0"
description = "Terminal UI task manager for Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0",
    "click>=8.0",
    "psutil>=5.9",
]

[project.scripts]
task-pilot = "task_pilot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_pilot"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
